--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "dropbox",
         "eventbrite",
         "facebook",
+        "fitbit",
         "flickr",
         "foursquare",
         "github",
